Closed
Bug 243852
Opened 21 years ago
Closed 21 years ago
"Block loading of remote images in mail messages" is reversed.
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird0.7
People
(Reporter: alex, Assigned: mscott)
References
Details
Attachments
(2 files)
12.29 KB,
text/html
|
Details | |
837 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7b) Gecko/20040415 Firefox/0.8.0+ (BlueFyre)
Build Identifier: Mozilla Thunderbird 0.6+ (Windows/20040517)
The "Block loading of remote images in mail messages" is reversed. If I have it
checked, it loads remote images. If I have it unchecked, it doesn't load remote
images.
Reproducible: Always
Steps to Reproduce:
1. Go to Tools -> Options -> Advanced
2. Check "Block loading of remote images in mail messages"
3. Send the test messaage to yourself (attachment below)
Actual Results:
Images are loaded.
Expected Results:
Images are not loaded.
Reporter | ||
Comment 1•21 years ago
|
||
To test this bug, you can send this HTML as a message to yourself.
Comment 2•21 years ago
|
||
I can confirm this problem. It seems to have started with the 20040515 nightly
build of Thunderbird.
It may have started earlier however there are no official builds for Win32
between the release of 0.6 and the nightly of 20040515. Also, it is not just
Windows 2000 but also occuring in Windows XP Home.
Assignee | ||
Comment 3•21 years ago
|
||
I wonder if this is related to Neil's fix for:
http://bugzilla.mozilla.org/show_bug.cgi?id=181973
I'll take a look.
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.7
I just found in the CVS build I did last night (2004-05-18):
version 0.6+ (20040518)
This is a linux GTK2 build, and suffers from exactly the same problem.
Comment 5•21 years ago
|
||
That fix should only affect pref panels that were using prefinverse which
doesn't appear to apply here, at least not according to LXR.
Assignee | ||
Comment 7•21 years ago
|
||
I think the checkin for Bug #191839 caused this regression. I think it reverses
the logic in nsMsgContentPolicy. I'm investigating.
Assignee | ||
Comment 8•21 years ago
|
||
Assignee | ||
Updated•21 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 9•21 years ago
|
||
*** Bug 248592 has been marked as a duplicate of this bug. ***
Comment 10•21 years ago
|
||
Please reopen this bug. It is present in Thunderbird 0.7.
You need to log in
before you can comment on or make changes to this bug.
Description
•