Bug #243852 --> reverse the logic on when we block remote images. Fixes the regression introduced by Bug #191839.

Effects thunderbird only.